--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -32,7 +32,7 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: container.tar
-      - name: Download container tar
+      - name: Download flake lock
         uses: actions/download-artifact@v4
         with:
           name: flake.lock
@@ -51,6 +51,8 @@ jobs:
         with:
           username: ${{ vars.DOCKERHUB_USERNAME }}
           password: ${{ secrets.DOCKERHUB_TOKEN }}
+      - name: Push latest to repo
+        run: "docker push cbingman/anki-sync-server:latest"
       - name: Push image to repo
         run: "docker push cbingman/anki-sync-server:$GITHUB_SHA-$REV"
       - name: Push production image
