--- a/.github/workflows/build-and-deploy.yml
+++ b/.github/workflows/build-and-deploy.yml
@@ -84,6 +84,6 @@ jobs:
           sed -i -e "s/appVersion: .*$/appVersion: \"$COMMIT_TAG\"/g" Chart.yaml
           git config user.name "$GITHUB_ACTOR"
           git config user.email "$GITHUB_ACTOR_ID+$GITHUB_ACTOR@users.noreply.github.com"
-          git add int.yaml
+          git add Chart.yaml
           git commit -m "Deploy [prod]"
           git push
